style: simple-ieee.csl

--- a/_bibliography/bibliography.bib
+++ b/_bibliography/bibliography.bib
@@ -7,3 +7,25 @@
   month =  "May",
   location =   {California, USA},
   }
+
+@InProceedings{Indelman09gnc_b,
+  author =   {V. Indelman and P. Gurfil and E. Rivlin and H. Rotstein},
+  title =  {Real-Time Mosaic-Aided Aerial Navigation: II. Sensor Fusion},
+  booktitle =  "AIAA Guidance, Navigation and Control Conference",
+  year =   2009,
+  month =  "August",
+  location =   {Chicago, USA},
+  pdf = "http://indelman.github.io/ANPL-Website/Publications/Indelman09gnc_b.pdf",
+  slides = "http://indelman.github.io/ANPL-Website/Publications/Indelman09gnc_b_ppt.pdf",  
+}
+
+@Article{Indelman10jgcd,
+  author =   {V. Indelman and P. Gurfil and E. Rivlin and H. Rotstein},
+  title =  {Navigation Aiding Based on Coupled Online Mosaicking and Camera Scanning},
+  journal =  "AIAA Journal of Guidance, Control and Dynamics",
+  volume =   33,
+  number =   6,
+  year =   2010,
+  pages =  {1866-1882},
+  pdf = "http://indelman.github.io/ANPL-Website/Publications/Indelman10jgcd.pdf", 
+}
